# rtsp-recorder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/scripts/: copy-to-package.mjs
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AddStreamDialog.tsx  Header.tsx  IdleRetentionCard.tsx  Modal.tsx  MotionThresholdCard.tsx  RetentionCard.tsx  SegmentLengthCard.tsx  StatusDot.tsx  StreamDetail.tsx  StreamList.tsx  TimezoneCard.tsx  Toast.tsx  VideoPlayerModal.tsx
src/rtsp_recorder/: __init__.py  __main__.py  config.py  idle_detector.py  idle_index.py  main.py  manager.py  models.py  recorder.py
tests/: test_kill_proc.py
