[project]
name = "rtsp-recorder"
version = "0.1.0"
description = "Daemon that records one or more RTSP streams to rotating 1-minute files, with a web UI."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26",
]

[project.scripts]
rtsp-recorder = "rtsp_recorder.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtsp_recorder"]

[tool.hatch.build.targets.wheel.force-include]
"src/rtsp_recorder/static" = "rtsp_recorder/static"
